--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Doctrine migrations are designed to roll back to the previous state when an
 error occurs but this cannot happen with MySQL (at least InnoDB) because of
 implicit commits on structure altering queries. To counter this problem this
 plugin uses mysqldump to get a snapshot of your database before the migration
-and then in the event of error or a migration dry run the backup will be
+and then in the event of an error or a migration dry run the backup will be
 restored. 
 
 Because of the nature of a database backup and a restore, there is the
@@ -49,5 +49,5 @@ Usage
 -----
 
 Once installed the task is ran by using doctrine:mysql-safe-migrate instead of
-doctrine:migrate. For further info type use
+doctrine:migrate. For further info type:
 ./symfony help doctrine:mysql-safe-migrate
